Analysis/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    LESSEQ
    COLON
    GRTREQ
    CYCLE
    SPACE
    newline
    FLOATNUMB
    TYPE

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID altaPrograma SEMICOLON program2 goToMainQuad cuerpo END SEMICOLON
Rule 2     goToMainQuad -> <empty>
Rule 3     altaPrograma -> <empty>
Rule 4     program2 -> declare program3
Rule 5     program2 -> empty
Rule 6     declare -> DECLARE declareRecursivo
Rule 7     declare -> empty
Rule 8     declareRecursivo -> type ID altaVarGlobal assignmentDecl declare2 declare3 SEMICOLON declareRecursivo
Rule 9     declare2 -> array
Rule 10    declare3 -> COMMA ID altaVarGlobal declare3
Rule 11    program3 -> funct program3
Rule 12    funct -> FUNCTION type ID altaModulo LEFTPAR funct2 RIGHTPAR LEFTKEY est functReturn RIGHTKEY
Rule 13    functReturn -> RETURN NUMBER SEMICOLON
Rule 14    functReturn -> RETURN ID SEMICOLON
Rule 15    functReturn -> empty
Rule 16    altaModulo -> <empty>
Rule 17    funct2 -> type ID altaVarLocal funct3
Rule 18    funct3 -> COMMA type ID altaVarLocal funct3
Rule 19    funct2 -> empty
Rule 20    funct3 -> empty
Rule 21    program3 -> empty
Rule 22    altaVarGlobal -> <empty>
Rule 23    declareRecursivo -> empty
Rule 24    declare3 -> empty
Rule 25    array -> LEFTBRACK exp RIGHTBRACK array
Rule 26    array -> empty
Rule 27    type -> type2
Rule 28    type2 -> INT
Rule 29    type2 -> FLOAT
Rule 30    type2 -> STRING
Rule 31    type2 -> BOOL
Rule 32    type2 -> VOID
Rule 33    cuerpo -> MAIN LEFTPAR RIGHTPAR LEFTKEY altaModuloMain est RIGHTKEY
Rule 34    altaModuloMain -> <empty>
Rule 35    est -> conditional est
Rule 36    est -> declareLocal est
Rule 37    est -> cycles est
Rule 38    est -> input est
Rule 39    est -> output est
Rule 40    est -> assignment est
Rule 41    est -> llamadaAFunct est
Rule 42    est -> empty
Rule 43    llamadaAFunct -> ID LEFTPAR llamadaAFunct2 RIGHTPAR
Rule 44    llamadaAFunct -> empty
Rule 45    llamadaAFunct2 -> ID llamadaAFunct3
Rule 46    llamadaAFunct3 -> COMMA ID
Rule 47    llamadaAFunct3 -> empty
Rule 48    llamadaAFunct2 -> empty
Rule 49    declareLocal -> DECLARE declareRecursivoLocal
Rule 50    declareRecursivoLocal -> type ID altaVarLocal assignmentDecl declare2Local declare3Local SEMICOLON declareRecursivoLocal
Rule 51    assignmentDecl -> ASSGN number
Rule 52    number -> INTEGER number2
Rule 53    number2 -> DOT INTEGER
Rule 54    number2 -> empty
Rule 55    assignmentDecl -> empty
Rule 56    declare2Local -> array
Rule 57    declare3Local -> COMMA ID altaVarLocal assignmentDecl declare3Local
Rule 58    declareRecursivoLocal -> empty
Rule 59    declareLocal -> empty
Rule 60    declare2Local -> empty
Rule 61    declare3Local -> empty
Rule 62    altaVarLocal -> <empty>
Rule 63    assignment -> ID ASSGN exp SEMICOLON
Rule 64    assignment -> ID ASSGN llamadaAFunct SEMICOLON
Rule 65    assignment -> empty
Rule 66    conditional -> IF LEFTPAR conditional2 RIGHTPAR LEFTKEY est RIGHTKEY conditionalElse
Rule 67    conditionalElse -> ELSE LEFTKEY est RIGHTKEY
Rule 68    conditionalElse -> empty
Rule 69    conditional2 -> exp conditional2
Rule 70    conditional2 -> empty
Rule 71    cycles -> while
Rule 72    cycles -> empty
Rule 73    cycles -> for
Rule 74    cycles -> do-while
Rule 75    do-while -> DO LEFTKEY est RIGHTKEY WHILE LEFTPAR while2 RIGHTPAR
Rule 76    while -> WHILE LEFTPAR while2 RIGHTPAR LEFTKEY est RIGHTKEY
Rule 77    while2 -> exp while2
Rule 78    while2 -> empty
Rule 79    for -> FOR LEFTPAR for2 SEMICOLON for4 SEMICOLON parte3For RIGHTPAR LEFTKEY est RIGHTKEY
Rule 80    for2 -> ID ASSGN number for3
Rule 81    for3 -> COMMA for2
Rule 82    for3 -> empty
Rule 83    for4 -> expFor
Rule 84    parte3For -> ID SUM SUM
Rule 85    parte3For -> ID MINUS MINUS
Rule 86    expFor -> ID expFor2
Rule 87    expFor -> number
Rule 88    expFor2 -> LESS expFor
Rule 89    expFor2 -> GRTR expFor
Rule 90    expFor2 -> EQ expFor
Rule 91    expFor2 -> NOTEQ expFor
Rule 92    expFor2 -> AND expFor
Rule 93    expFor2 -> OR expFor
Rule 94    expFor2 -> empty
Rule 95    exp -> ID exp2
Rule 96    exp -> number exp2
Rule 97    exp -> empty
Rule 98    exp2 -> LESS exp
Rule 99    exp2 -> GRTR exp
Rule 100   exp2 -> EQ exp
Rule 101   exp2 -> NOTEQ exp
Rule 102   exp2 -> AND exp
Rule 103   exp2 -> OR exp
Rule 104   exp2 -> SUM exp
Rule 105   exp2 -> MINUS exp
Rule 106   exp2 -> MULTP exp
Rule 107   exp2 -> DIVIDE exp
Rule 108   exp2 -> empty
Rule 109   output -> WRITE LEFTPAR output2 RIGHTPAR SEMICOLON
Rule 110   output2 -> ID output2
Rule 111   output2 -> QUOTE ID QUOTE output2
Rule 112   output2 -> empty
Rule 113   input -> READ LEFTPAR ID RIGHTPAR SEMICOLON
Rule 114   empty -> <empty>

Terminals, with rules where they appear

AND                  : 92 102
ASSGN                : 51 63 64 80
BOOL                 : 31
COLON                : 
COMMA                : 10 18 46 57 81
CYCLE                : 
DECLARE              : 6 49
DIVIDE               : 107
DO                   : 75
DOT                  : 53
ELSE                 : 67
END                  : 1
EQ                   : 90 100
FLOAT                : 29
FLOATNUMB            : 
FOR                  : 79
FUNCTION             : 12
GRTR                 : 89 99
GRTREQ               : 
ID                   : 1 8 10 12 14 17 18 43 45 46 50 57 63 64 80 84 85 86 95 110 111 113
IF                   : 66
INT                  : 28
INTEGER              : 52 53
LEFTBRACK            : 25
LEFTKEY              : 12 33 66 67 75 76 79
LEFTPAR              : 12 33 43 66 75 76 79 109 113
LESS                 : 88 98
LESSEQ               : 
MAIN                 : 33
MINUS                : 85 85 105
MULTP                : 106
NOTEQ                : 91 101
NUMBER               : 13
OR                   : 93 103
PROGRAM              : 1
QUOTE                : 111 111
READ                 : 113
RETURN               : 13 14
RIGHTBRACK           : 25
RIGHTKEY             : 12 33 66 67 75 76 79
RIGHTPAR             : 12 33 43 66 75 76 79 109 113
SEMICOLON            : 1 1 8 13 14 50 63 64 79 79 109 113
SPACE                : 
STRING               : 30
SUM                  : 84 84 104
TYPE                 : 
VOID                 : 32
WHILE                : 75 76
WRITE                : 109
error                : 
newline              : 

Nonterminals, with rules where they appear

altaModulo           : 12
altaModuloMain       : 33
altaPrograma         : 1
altaVarGlobal        : 8 10
altaVarLocal         : 17 18 50 57
array                : 9 25 56
assignment           : 40
assignmentDecl       : 8 50 57
conditional          : 35
conditional2         : 66 69
conditionalElse      : 66
cuerpo               : 1
cycles               : 37
declare              : 4
declare2             : 8
declare2Local        : 50
declare3             : 8 10
declare3Local        : 50 57
declareLocal         : 36
declareRecursivo     : 6 8
declareRecursivoLocal : 49 50
do-while             : 74
empty                : 5 7 15 19 20 21 23 24 26 42 44 47 48 54 55 58 59 60 61 65 68 70 72 78 82 94 97 108 112
est                  : 12 33 35 36 37 38 39 40 41 66 67 75 76 79
exp                  : 25 63 69 77 98 99 100 101 102 103 104 105 106 107
exp2                 : 95 96
expFor               : 83 88 89 90 91 92 93
expFor2              : 86
for                  : 73
for2                 : 79 81
for3                 : 80
for4                 : 79
funct                : 11
funct2               : 12
funct3               : 17 18
functReturn          : 12
goToMainQuad         : 1
input                : 38
llamadaAFunct        : 41 64
llamadaAFunct2       : 43
llamadaAFunct3       : 45
number               : 51 80 87 96
number2              : 52
output               : 39
output2              : 109 110 111
parte3For            : 79
program              : 0
program2             : 1
program3             : 4 11
type                 : 8 12 17 18 50
type2                : 27
while                : 71
while2               : 75 76 77

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID altaPrograma SEMICOLON program2 goToMainQuad cuerpo END SEMICOLON

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID altaPrograma SEMICOLON program2 goToMainQuad cuerpo END SEMICOLON

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . altaPrograma SEMICOLON program2 goToMainQuad cuerpo END SEMICOLON
    (3) altaPrograma -> .

    SEMICOLON       reduce using rule 3 (altaPrograma -> .)

    altaPrograma                   shift and go to state 4

state 4

    (1) program -> PROGRAM ID altaPrograma . SEMICOLON program2 goToMainQuad cuerpo END SEMICOLON

    SEMICOLON       shift and go to state 5


state 5

    (1) program -> PROGRAM ID altaPrograma SEMICOLON . program2 goToMainQuad cuerpo END SEMICOLON
    (4) program2 -> . declare program3
    (5) program2 -> . empty
    (6) declare -> . DECLARE declareRecursivo
    (7) declare -> . empty
    (114) empty -> .

    DECLARE         shift and go to state 7
    MAIN            reduce using rule 114 (empty -> .)
    FUNCTION        reduce using rule 114 (empty -> .)

    program2                       shift and go to state 6
    declare                        shift and go to state 8
    empty                          shift and go to state 9

state 6

    (1) program -> PROGRAM ID altaPrograma SEMICOLON program2 . goToMainQuad cuerpo END SEMICOLON
    (2) goToMainQuad -> .

    MAIN            reduce using rule 2 (goToMainQuad -> .)

    goToMainQuad                   shift and go to state 10

state 7

    (6) declare -> DECLARE . declareRecursivo
    (8) declareRecursivo -> . type ID altaVarGlobal assignmentDecl declare2 declare3 SEMICOLON declareRecursivo
    (23) declareRecursivo -> . empty
    (27) type -> . type2
    (114) empty -> .
    (28) type2 -> . INT
    (29) type2 -> . FLOAT
    (30) type2 -> . STRING
    (31) type2 -> . BOOL
    (32) type2 -> . VOID

    FUNCTION        reduce using rule 114 (empty -> .)
    MAIN            reduce using rule 114 (empty -> .)
    INT             shift and go to state 12
    FLOAT           shift and go to state 14
    STRING          shift and go to state 11
    BOOL            shift and go to state 15
    VOID            shift and go to state 13

    declareRecursivo               shift and go to state 16
    type                           shift and go to state 17
    empty                          shift and go to state 18
    type2                          shift and go to state 19

state 8

    (4) program2 -> declare . program3
    (11) program3 -> . funct program3
    (21) program3 -> . empty
    (12) funct -> . FUNCTION type ID altaModulo LEFTPAR funct2 RIGHTPAR LEFTKEY est functReturn RIGHTKEY
    (114) empty -> .

    FUNCTION        shift and go to state 20
    MAIN            reduce using rule 114 (empty -> .)

    funct                          shift and go to state 21
    program3                       shift and go to state 22
    empty                          shift and go to state 23

state 9

    (5) program2 -> empty .
    (7) declare -> empty .

  ! reduce/reduce conflict for MAIN resolved using rule 5 (program2 -> empty .)
    MAIN            reduce using rule 5 (program2 -> empty .)
    FUNCTION        reduce using rule 7 (declare -> empty .)

  ! MAIN            [ reduce using rule 7 (declare -> empty .) ]


state 10

    (1) program -> PROGRAM ID altaPrograma SEMICOLON program2 goToMainQuad . cuerpo END SEMICOLON
    (33) cuerpo -> . MAIN LEFTPAR RIGHTPAR LEFTKEY altaModuloMain est RIGHTKEY

    MAIN            shift and go to state 25

    cuerpo                         shift and go to state 24

state 11

    (30) type2 -> STRING .

    ID              reduce using rule 30 (type2 -> STRING .)


state 12

    (28) type2 -> INT .

    ID              reduce using rule 28 (type2 -> INT .)


state 13

    (32) type2 -> VOID .

    ID              reduce using rule 32 (type2 -> VOID .)


state 14

    (29) type2 -> FLOAT .

    ID              reduce using rule 29 (type2 -> FLOAT .)


state 15

    (31) type2 -> BOOL .

    ID              reduce using rule 31 (type2 -> BOOL .)


state 16

    (6) declare -> DECLARE declareRecursivo .

    FUNCTION        reduce using rule 6 (declare -> DECLARE declareRecursivo .)
    MAIN            reduce using rule 6 (declare -> DECLARE declareRecursivo .)


state 17

    (8) declareRecursivo -> type . ID altaVarGlobal assignmentDecl declare2 declare3 SEMICOLON declareRecursivo

    ID              shift and go to state 26


state 18

    (23) declareRecursivo -> empty .

    FUNCTION        reduce using rule 23 (declareRecursivo -> empty .)
    MAIN            reduce using rule 23 (declareRecursivo -> empty .)


state 19

    (27) type -> type2 .

    ID              reduce using rule 27 (type -> type2 .)


state 20

    (12) funct -> FUNCTION . type ID altaModulo LEFTPAR funct2 RIGHTPAR LEFTKEY est functReturn RIGHTKEY
    (27) type -> . type2
    (28) type2 -> . INT
    (29) type2 -> . FLOAT
    (30) type2 -> . STRING
    (31) type2 -> . BOOL
    (32) type2 -> . VOID

    INT             shift and go to state 12
    FLOAT           shift and go to state 14
    STRING          shift and go to state 11
    BOOL            shift and go to state 15
    VOID            shift and go to state 13

    type                           shift and go to state 27
    type2                          shift and go to state 19

state 21

    (11) program3 -> funct . program3
    (11) program3 -> . funct program3
    (21) program3 -> . empty
    (12) funct -> . FUNCTION type ID altaModulo LEFTPAR funct2 RIGHTPAR LEFTKEY est functReturn RIGHTKEY
    (114) empty -> .

    FUNCTION        shift and go to state 20
    MAIN            reduce using rule 114 (empty -> .)

    program3                       shift and go to state 28
    funct                          shift and go to state 21
    empty                          shift and go to state 23

state 22
